--- a/demo/index.html
+++ b/demo/index.html
@@ -8,5 +8,24 @@
 </head>
 <body>
 	
+	<main>
+
+		<section id="login">
+			<h1>Welcome to Popcorntime remote control</h1>
+			<h2>Before you can start to use this application to control remotely your popcorntime, you must chek these settings:</h2>
+			<form id="options">
+				<input type="text" id="ip-address" placeholder="ip address - default: localhost" />
+				<input type="text" id="port" placeholder="port - default: 8080" />
+				<input type="text" id="username" placeholder="username - default: popcorn" />
+				<label for="password">password</label>
+				<input type="password" id="password" placeholder="popcorn" />
+			</form>
+		</section>
+
+		<section id="controller">
+		</section>
+
+	</main>
+
 </body>
 </html>
