Updated demo to look like the ui of the app

--- a/demo/index.html
+++ b/demo/index.html
@@ -15,11 +15,24 @@
 </head>
 <body>
 	<main>
+
 		<div id="header">
-			<h1>Welcome to Popcorntime Remote Control</h1>
+
+			<div id="left">
+				<a class="active">Film</a>
+				<a>Tv Shows</a>
+				<a>Anime</a>
+			</div>
+
+			<div id="right">
+
+			</div>
+	
+			<div style="clear:both;"></div>
 		</div>
 
 		<section id="login">
+			<h1>Welcome to Popcorntime Remote Control</h1>
 			<h2>Before you can start to use this application to control remotely your popcorntime, you must chek these settings:</h2>
 			<form id="options">
 
@@ -39,8 +52,15 @@
 			</form>
 		</section>
 
-		<section id="controller">
+		<section id="movies">
+			<ul>
+				
+			</ul>
+		</section>
+
+		<!--<section id="controller">
 			<div id="toolbar">
+				<i class="fa fa-arrow-left back"></i>
 				<i class="fa fa-clone"></i>
 				<i class="fa fa-heart"></i>
 				<i class="fa fa-search"></i>
@@ -54,7 +74,7 @@
 				<span class="center"></span>
 			</div>
 
-		</section>
+		</section>-->
 
 	</main>
 </body>
