--- a/demo/index.html
+++ b/demo/index.html
@@ -18,10 +18,10 @@
 
 		<div id="header">
 
-			<div id="left">
-				<a class="active">Film</a>
-				<a>Tv Shows</a>
-				<a>Anime</a>
+			<div id="tabs">
+				<a id="movies" class="active">Movies</a>
+				<a id="shows">Tv Series</a>
+				<a id="anime">Anime</a>
 			</div>
 
 			<div id="right">
@@ -52,7 +52,7 @@
 			</form>
 		</section>
 
-		<section id="movies">
+		<section id="list">
 			<ul>
 				
 			</ul>
