Grouped action into getlist function

--- a/demo/index.html
+++ b/demo/index.html
@@ -19,7 +19,7 @@
 		<div id="header">
 
 			<div id="tabs">
-				<a id="movies" class="active">Movies</a>
+				<a id="movies">Movies</a>
 				<a id="shows">Tv Series</a>
 				<a id="anime">Anime</a>
 			</div>
