--- a/demo/index.html
+++ b/demo/index.html
@@ -8,8 +8,7 @@
 	<!-- Including jQuery -->
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<!-- Including the library -->
-	<!--<script src="https://raw.githubusercontent.com/giacomocerquone/popcorntime_remote.js/master/dist/popcorntime_remote.js"></script>-->
-	<script src="../dist/popcorntime_remote.js"></script>
+	<script src="https://cdn.rawgit.com/giacomocerquone/popcorntime_remote.js/master/dist/popcorntime_remote.js"></script>
 	<script src="script.js"></script>
 
 </head>
