--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<!-- Including jQuery -->
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<!-- Including the library -->
-	<script src="https://cdn.rawgit.com/giacomocerquone/popcorntime_remote.js/master/dist/popcorntime_remote.js"></script>
+	<script src="https://cdn.rawgit.com/giacomocerquone/popcorntime_remote.js/master/dist/popcorntime_remote.min.js"></script>
 	<script src="script.js"></script>
 
 </head>
