--- a/index.html
+++ b/index.html
@@ -1,19 +1,34 @@
 <html>
 <head>
-    <title>Popcorntime Remote Control</title>
-
-    <link rel="stylesheet" href="style.css" />
-    <!-- Including Font Awesome -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-    <!-- Including jQuery -->
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <!-- Including the library -->
-    <script src="https://cdn.rawgit.com/giacomocerquone/popcorntime_remote.js/master/dist/popcorntime_remote.min.js"></script>
-    <script src="script.js"></script>
-
+    <title>Popcorn Time Remote Controller by Giacomo Cerquone</title>
+    <meta name="description" content="Giacomo Cerquone, developer and web designer." />
+    <meta charset="utf-8">
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="shortcut icon" href="../assets/media/portfolio/popremote.png">
+    <link rel="icon" type="image/png" href="../assets/media/portfolio/popremote.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="../assets/media/portfolio/popremote.png" sizes="180x180">
+
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script src="https://cdn.rawgit.com/giacomocerquone/popcorntime_remote.js/master/dist/popcorntime_remote.min.js"></script>
+    <script src="script.js"></script>
+
+    <meta name="twitter:site" content="@giacomocerquone">
+    <meta name="twitter:creator" content="@giacomocerquone">
+    <meta name="twitter:title" content="Popcorn Time Remote Controller by Giacomo Cerquone">
+    <meta name="twitter:description" content="Control your popcorntime from your phone.">
+    <meta name="twitter:url" content="http://popremote.giacomocerquone.com/">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:image" content="../assets/media/portfolio/popremote.png">
+    <meta property="og:title" content="Popcorn Time Remote Controller by Giacomo Cerquone">
+    <meta property="og:description" content="Control your popcorntime from your phone.">
+    <meta property="og:url" content="http://popremote.giacomocerquone.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="../assets/media/portfolio/popremote.png">
 </head>
 <body>
     <main>
@@ -50,7 +65,7 @@
                 <label for="password">PASSWORD</label>
                 <input type="password" id="password" placeholder="popcorn" />
 
-                <a href="javascript:void(0);" id="submit">connect</a>
+                <input type="submit" id="submit" value="connect" />
             </form>
         </section>
 
@@ -59,24 +74,6 @@
                 
             </ul>
         </section>
-
-        <!--<section id="controller">
-            <div id="toolbar">
-                <i class="fa fa-arrow-left back"></i>
-                <i class="fa fa-clone"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-search"></i>
-            </div>
-
-            <div id="arrows">
-                <i class="fa fa-chevron-up"></i>
-                <i class="fa fa-chevron-down"></i>
-                <i class="fa fa-chevron-left"></i>
-                <i class="fa fa-chevron-right"></i>
-                <span class="center"></span>
-            </div>
-
-        </section>-->
 
     </main>
 </body>
