--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link rel="shortcut icon" href="../assets/media/portfolio/popremote.png">
-    <link rel="icon" type="image/png" href="../assets/media/portfolio/popremote.png" sizes="192x192">
-    <link rel="apple-touch-icon" href="../assets/media/portfolio/popremote.png" sizes="180x180">
+    <link rel="shortcut icon" href="http://giacomocerquone.com/assets/media/portfolio/popremote.png">
+    <link rel="icon" type="image/png" href="http://giacomocerquone.com/assets/media/portfolio/popremote.png" sizes="192x192">
+    <link rel="apple-touch-icon" href="http://giacomocerquone.com/assets/media/portfolio/popremote.png" sizes="180x180">
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
@@ -23,12 +23,12 @@
     <meta name="twitter:description" content="Control your popcorntime from your phone.">
     <meta name="twitter:url" content="http://popremote.giacomocerquone.com/">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="../assets/media/portfolio/popremote.png">
+    <meta name="twitter:image" content="http://giacomocerquone.com/assets/media/portfolio/popremote.png">
     <meta property="og:title" content="Popcorn Time Remote Controller by Giacomo Cerquone">
     <meta property="og:description" content="Control your popcorntime from your phone.">
     <meta property="og:url" content="http://popremote.giacomocerquone.com/">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="../assets/media/portfolio/popremote.png">
+    <meta property="og:image" content="http://giacomocerquone.com/assets/media/portfolio/popremote.png">
 </head>
 <body>
     <main>
