--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="wUuqXhOCbOAZCpvg855d0049d28UkPNOcLFBcy7LCjk" />
 
     <link rel="shortcut icon" href="http://giacomocerquone.com/assets/media/portfolio/popremote.png">
     <link rel="icon" type="image/png" href="http://giacomocerquone.com/assets/media/portfolio/popremote.png" sizes="192x192">
