Added open sans font and watchlist and favorites

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script src="https://cdn.rawgit.com/giacomocerquone/popcorntime_remote.js/master/dist/popcorntime_remote.min.js"></script>
@@ -43,6 +44,8 @@
             </div>
 
             <div id="right">
+                <i id="Watchlist" class="fa fa-inbox"></i>
+                <i id="Favorites" class="fa fa-heart"></i>
 
             </div>
     
