--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
 <html>
+<!--
+# This file is part of "Popcorn Time Remote Controller by Giacomo Cerquone".
+#
+# Copyright(c) 2015 Giacomo Cerquone
+# cerquone96@hotmail.it
+# http://www.giacomocerquone.com
+#
+# This file is released under of the GNU General Public License Version 3.
+-->
 <head>
     <title>Popcorn Time Remote Controller by Giacomo Cerquone</title>
     <meta name="description" content="Giacomo Cerquone, developer and web designer." />
