fixed intervals, shortened code, improved speed, added details

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
     <main>
 
         <div id="header">
-
             <div id="tabs">
                 <a id="movies">Movies</a>
                 <a id="shows">Tv Series</a>
@@ -55,7 +54,6 @@
             <div id="right">
                 <i id="Watchlist" class="fa fa-inbox"></i>
                 <i id="Favorites" class="fa fa-heart"></i>
-
             </div>
     
             <div style="clear:both;"></div>
@@ -82,11 +80,7 @@
             </form>
         </section>
 
-        <section id="list">
-            <ul>
-                
-            </ul>
-        </section>
+        <div id="container"></div>
 
     </main>
 
