--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
             </div>
 
             <div id="right">
+                <input type="search" class="search-input" name="s" placeholder="Search... (and press enter)" />
+                <i id="search-button" class="fa fa-search"></i>
                 <i id="Watchlist" class="fa fa-inbox"></i>
                 <i id="Favorites" class="fa fa-heart"></i>
             </div>
