added github link

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
 
     </main>
 
+    <a style="font-size:2em;" target="_blanket" href="https://github.com/giacomocerquone/popcorntime_remote.js">
+        <i class="fa fa-github"></i>
+        <span style="display:block; font-size:.8rem;">View on Github</span>
+    </a>
+
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
