Added item's elements

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
     </main>
 
-    <a style="font-size:2em;" target="_blanket" href="https://github.com/giacomocerquone/popcorntime_remote.js">
+    <a style="font-size:2em; display:inline-block; margin-top:1em;" target="_blanket" href="https://github.com/giacomocerquone/popcorntime_remote.js">
         <i class="fa fa-github"></i>
         <span style="display:block; font-size:.8rem;">View on Github</span>
     </a>
