--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 -->
 <html>
 <head>
-    <title>Popcorn Time Remote Controller by Giacomo Cerquone</title>
+    <title>Butter Remote Controller by Giacomo Cerquone</title>
     <meta name="description" content="Giacomo Cerquone, developer and web designer." />
     <meta charset="utf-8">
     <meta name="HandheldFriendly" content="True" />
@@ -25,19 +25,19 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,600' rel='stylesheet' type='text/css'>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-    <script src="https://cdn.rawgit.com/giacomocerquone/popcorntime_remote.js/master/dist/popcorntime_remote.min.js"></script>
+    <script src="https://cdn.rawgit.com/giacomocerquone/butter_remote.js/master/dist/butter_remote.min.js"></script>
     <script src="script.js"></script>
 
     <meta name="twitter:site" content="@giacomocerquone">
     <meta name="twitter:creator" content="@giacomocerquone">
-    <meta name="twitter:title" content="Popcorn Time Remote Controller by Giacomo Cerquone">
-    <meta name="twitter:description" content="Control your popcorntime from your phone.">
-    <meta name="twitter:url" content="http://popremote.giacomocerquone.com/">
+    <meta name="twitter:title" content="Butter Remote Controller by Giacomo Cerquone">
+    <meta name="twitter:description" content="Control Butter from your phone.">
+    <meta name="twitter:url" content="http://butter.giacomocerquone.com/">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:image" content="http://giacomocerquone.com/assets/media/portfolio/popremote.png">
-    <meta property="og:title" content="Popcorn Time Remote Controller by Giacomo Cerquone">
-    <meta property="og:description" content="Control your popcorntime from your phone.">
-    <meta property="og:url" content="http://popremote.giacomocerquone.com/">
+    <meta property="og:title" content="Butter Remote Controller by Giacomo Cerquone">
+    <meta property="og:description" content="Control Butter from your phone.">
+    <meta property="og:url" content="http://butter.giacomocerquone.com/">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://giacomocerquone.com/assets/media/portfolio/popremote.png">
 </head>
@@ -63,7 +63,7 @@
 
         <section id="login">
             <h1>Welcome to the Popcorn Time Remote Controller by Giacomo Cerquone</h1>
-            <h2>Before you can start to use this application to control remotely your popcorntime, you must chek these settings:</h2>
+            <h2>Before you can start to use this application to control remotely Butter, you must chek these settings:</h2>
             <form id="options">
 
                 <label for="ip-address">IP ADDRESS</label>
@@ -86,7 +86,7 @@
 
     </main>
 
-    <a style="font-size:2em; display:inline-block; margin-top:1em;" target="_blanket" href="https://github.com/giacomocerquone/popcorntime_remote.js">
+    <a style="font-size:2em; display:inline-block; margin-top:1em;" target="_blanket" href="https://github.com/giacomocerquone/butter_remote.js">
         <i class="fa fa-github"></i>
         <span style="display:block; font-size:.8rem;">View on Github</span>
     </a>
