--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         </div>
 
         <section id="login">
-            <h1>Welcome to the Popcorn Time Remote Controller by Giacomo Cerquone</h1>
+            <h1>Welcome to the Butter Remote Controller by Giacomo Cerquone</h1>
             <h2>Before you can start to use this application to control remotely Butter, you must chek these settings:</h2>
             <form id="options">
 
